style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

.nav {
    position: fixed;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 1rem 6.5rem;
    background: #222;
    z-index: 1000;
}
.nav a {
    text-decoration: none;
}
#logo:hover {
    color: #ff5733;
    cursor: pointer;
}

#logo {
    color: #fff;
    font-size: 1.7rem;
}

#item {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#item li {
    list-style: none;
    padding-right: 50px;
}

#item li a {
    text-decoration: none;
    font-size: 1rem;
    text-transform: uppercase;
    color: #fff;
}

#item li a:hover {
    color: #ff5733;
    cursor: pointer;
}

#item .icon a i {
    color: #fff;
    font-weight: bolder;
    padding-right: 20px;
}

#item .icon a i:hover {
    color: #ff5733;
    cursor: pointer;
}

#bar {
    color: #ff5733;
    font-weight: lighter;
    font-size: 1.5rem;
    position: absolute;
    top: 35%;
    right: 7%;
    display: none;
    cursor: pointer;
  }

.back {
    background-image: url(homeBackground.jpg);
    width: 100%;
    height: 100vh;
    background-size: cover;
}

.back .overlay {
    background: #171819;
    width: 100%;
    height: 100%;
    opacity: 0.75;
}

.mid {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;

}

.mid p {
    color: #7f8c8d;
    font-size: 1.3rem;
    margin-bottom: 1.4rem;
}

.mid h2 {
    color: #fff;
    font-size: 3rem;
}

.mid .btn {
    margin-top: 2rem;
}

.mid .btn a {
    text-decoration: none;
    text-transform: uppercase;
}

.mid .btn a.borderless {
    color: #fff;
    font-weight: 500;
    padding: 0.9rem 1.6rem;
}

.mid .btn a.borderless:hover {
    color: #ff5733;
}

.mid .btn a.border {
    color: #ff5733;
    border: 1px solid #ff5733;
    border-radius: 3px;
    font-weight: 500;
    padding: 0.9rem 1.6rem;
}

.mid .btn a.border:hover {
    background: #fff;
    border: 1px solid #fff;
}

.about {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 8rem 12rem;
    background: #171819;
}

.about h3, h6, h5 {
    color: #fff;
}

.about .one {
    width: 45%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.about .one h3 {
    font-size: 2.5rem;
    padding-bottom: 1.1rem;
}

.about .one h6 {
    font-size: 1.3rem;
    font-weight: 400;
    padding-bottom: 1.1rem;
}

.about .one p {
    color: #666262;
    font-size: 1.1rem;
    padding-bottom: 1.5rem;
}

.about .one a {
    color: #fff;
    background: #ff5733;
    border-radius: 3px;
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;
}

.about .one a:hover {
    background: #fff;
    color: #ff5733;
}

.about .two {
    width: 45%;
    border-left: 1px solid #666262;
    padding-left: 4rem;
}

.about .two h3 {
    font-size: 2.5rem;
}

.about .two h5 {
    font-size: 1.1rem;
}

.about .two p {
    font-size: 1.1rem;
    color: #666262;
    margin-bottom: 0.8rem;
}

.programSection h2 {
    padding-top: 4.5rem;
    background: #666262;
    text-align: center;
    color: #fff;
    font-size: 2.5rem;
}

.programs {
    background: #666262;
    padding: 3rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.programs .programs1 {
    width: 30%;
    height: auto;
    box-sizing: border-box;
    background: #fff;
}

.programs .programs1 .img img {
    width: 100%;
    object-fit: cover;
}

.programs .programs1 .programDetails .name h4 {
    font-size: 1.5rem;
    align-items: center;
    text-align: center;
}

.programs .programs1 .programDetails .details p {
    padding: 1rem;
}

.contact {
    padding: 8rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.contact .form {
    width: 45%;
}

.contact .form h2 {
    font-size: 2rem;
    color: #212529;
    padding-bottom: 10px;
    width: 100%;
}

.contact .form .submit {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.contact .form .submit input, .contact .form .submit textarea {
    width: 100%;
    padding: 15px;
    border: 1px solid #666262;
    outline: none;
    margin: 13px 0;
}

.contact .form .submit input::placeholder {
    color: #7f8c8d;
    font-size: 1.1rem;
}

.contact .form .submit textarea::placeholder {
    color: #7f8c8d;
    font-size: 1.1rem;
    height: 80%;
}

.contact .form .submit a {
    width: 100%;
    padding: 15px 0;
    text-decoration: none;
    background: #212529;
    color: #fff;
    text-align: center;
    font-size: 1.1rem;
    margin: 13px 0;
}

.contact .map {
    width: 45%;
}
.contact .map h2 {
    font-size: 2rem;
    color: #212529;
    padding-bottom: 10px;
    width: 100%;
}

.contact .map p {
    font-size: 1.1rem;
    color: #212529;
    padding-bottom: 10px;
    width: 100%;
}

.contact .map iframe {
    width: 100%;
    padding-top: 10px;
}

.contact .map p i {
    color: #ff5733;
    padding-right: 4px;
}

@media screen and (max-width: 1042px) {
    .nav {
      padding: 1rem 4.5rem;
    }
  
    .nav h2 {
      font-size: 1.4rem;
    }
  
    #item li {
      padding-right: 30px;
    }
  
    #item li a {
      font-size: 0.9rem;
    }
  
    #item i {
      padding-right: 20px;
    }
  }

  @media screen and (max-width: 991px) {
    .nav {
      padding: 1rem 3rem;
    }
    .nav h2 {
      font-size: 1.6rem;
    }
  
    #item {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: center;
      position: fixed;
      top: 0;
      right: -300px;
      width: 300px;
      height: 100vh;
      background: rgba(0, 0, 0, 0.8);
      z-index: 10000;
      margin-top: 4.2rem;
      transition: 0.5s;
    }
  
    #item li {
      padding-right: 0;
      padding: 4px 0;
    }
  
    #item li a {
      font-size: 1.2rem;
    }
  
    #item .icon {
      padding-top: 20px;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
    }
    #item .icon i {
      padding: 0 15px 0 15px;
    }
  
    #bar {
      display: initial;
    }
  
    .mid p {
      font-size: 1.1rem;
      margin-bottom: 1.2rem;
    }
  
    .mid h2 {
      font-size: 2.5rem;
    }
    .mid .btn {
      margin-top: 1.5rem;
    }
    .mid .btn a {
      font-size: 0.9rem;
    }
    .mid .btn a.borderless {
      padding: 0.7rem 1.4rem;
    }
  
    .mid .btn a.border {
      padding: 0.7rem 1.4rem;
    }
  
    .about {
      padding: 6rem 7rem;
    }
    .about .one {
      width: 50%;
    }
  
    .about .one h3 {
      font-size: 2rem;
      margin-bottom: 1rem;
    }
  
    .about .one h6 {
      font-size: 1.3rem;
      font-weight: 400;
      margin-bottom: 1.2rem;
    }
    .about .one p {
      font-size: 1.1rem;
      margin-bottom: 2.2rem;
    }
  
    .about .one a {
      font-size: 0.9rem;
    }
  
    .about .two {
      padding-left: 3.5rem;
    }
  
    .about .two h3 {
      font-size: 2rem;
    }
  
    .about .two h5 {
      font-size: 1rem;
    }
  
    .about .two p {
      font-size: 1rem;
      margin-bottom: 0.6rem;
    }

    .programSection h2 {
      font-size: 2rem;
      padding-bottom: 1.4rem;
    }
  
    .programDetails .details p {
        height: 150px;
        overflow-y: auto;
        font-size: 1rem;
      }
  
    .contact {
      padding: 6rem;
    }
    .contact .form h2 {
      font-size: 2rem;
      padding-bottom: 7px;
    }
  
    .contact .form .submit input,
    textarea {
      padding: 12px;
      margin: 10px 0;
    }
  
    .contact .form .submit input::placeholder {
      font-size: 1rem;
    }
    .contact .form .submit textarea {
      font-size: 1rem;
    }
  
    .contact .form a {
      padding: 13px 0;
      margin: 10px 0;
      font-size: 1rem;
    }
  
    .contact .map h2 {
      font-size: 2rem;
      padding-bottom: 7px;
    }
  
    .contact .map p {
      font-size: 1rem;
      padding-bottom: 20px;
    }
    .contact .map p i {
      padding-right: 4px;
    }
  }

  @media screen and (max-width: 768px) {
    .nav h2 {
      font-size: 1.5rem;
    }
  
    .back {
      background-position: center;
    }
  
    .mid p {
      font-size: 1rem;
      margin-bottom: 1rem;
    }
  
    .mid h2 {
      font-size: 2.1rem;
    }
    .mid .btn {
      margin-top: 1rem;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
    .mid .btn a {
      font-size: 0.9rem;
    }
    .mid .btn a.borderless {
      padding: 0.7rem 1.4rem;
      margin-bottom: 7px;
    }
  
    .about {
      padding: 5rem 2rem;
      flex-direction: column;
      justify-content: center;
    }
    .about .one {
      width: 70%;
    }
  
    .about .one a {
      font-size: 1rem;
    }
  
    .about .two {
      padding-left: 0;
      border-left: 0;
      border-top: 1px solid #666262;
      width: 70%;
      margin-top: 1.7rem;
      padding-top: 1.7rem;
    }
  
    .programSection .programs {
      padding: 5rem 2rem;
      flex-direction: row;
      justify-content: space-between;
    }

    .programDetails .details p {
        height: 150px;
        overflow-y: auto;
      }
  
    .contact {
      padding: 5rem 2rem;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
    .contact .form {
      width: 70%;
    }
  
    .contact .form h2 {
      font-size: 2.5rem;
    }
  
    .contact .map {
      width: 60%;
      margin-top: 20px;
      margin: auto;
    }
  }

  @media screen and (max-width: 496px) {
    .nav h2 {
      font-size: 1.5rem;
    }
  
    .mid p {
      margin-bottom: 0.8rem;
    }
  
    .mid h2 {
      font-size: 1.8rem;
    }
  
    .about {
      padding: 4rem 1rem;
      flex-direction: column;
      justify-content: center;
    }
    .about .one {
      width: 100%;
    }
    .about .two {
      width: 100%;
    }
  
    .programSection {
        display: none;
    }
  
    .contact {
      padding: 4rem 1rem;
    }
    .contact .form {
      width: 100%;
    }
  
    .contact .map {
      width: 100%;
    }

    .contact .map h2 {
        font-size: larger;
        padding: 1rem 0;
        text-decoration: underline;
    }
  }

